# biagent-backend

./: CLAUDE.md  TODOs.md  alembic.ini  config.py  debug_imports.py  main.py  pyproject.toml  requirements.txt  start.sh  tasks.py
agents/: __init__.py  base.py  coding_agent.py  context_agent.py  docs_agent.py  pipeline_session.py  pipeline_tools.py  planning_agent.py  pr_agent.py  review_agent.py  risk_agent.py  testing_agent.py
alembic/: env.py
alembic/versions/: 20250119_000000_initial_schema.py
api/: __init__.py  clarifications.py  cycles.py  organizations.py  pipelines.py  repos.py  risks.py  session.py  share_links.py  subagents.py  tickets.py  usage.py  waitlist.py  webhooks.py  worktrees.py
biagent_jira/: __init__.py  cli.py
db/: __init__.py  schema.py
middleware/: __init__.py  auth.py
models/: __init__.py  base.py  organization.py  pipeline.py  ticket.py
schemas/: __init__.py  auth.py  organization.py  pipeline.py  ticket.py
scripts/: migrate_events.py  print_oauth_token.py
services/: __init__.py  credential_manager.py  cycle_detector.py  github_handler.py  github_service.py  jira_sync.py  oauth_manager.py  pipeline_engine.py  session_store.py  setup_detector.py  vault_client.py  worktree_manager.py
websocket/: __init__.py  manager.py
