[project]
name = "biagent-backend"
version = "0.1.0"
description = "BiAgent - AI-powered JIRA ticket resolution system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
    "anthropic>=0.40.0",
    "websockets>=12.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "uuid6>=2024.1.12",
]

[project.scripts]
biagent-jira = "biagent_jira.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "agents", "services", "db", "websocket", "biagent_jira"]
